feat(user): Register / Login / Logout
